--- a/Od/DemoOd/index.html
+++ b/Od/DemoOd/index.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Od Demoes</title>
+    <title>Od Demos</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
     <script src="app.js"></script>
 </head>
 <body>
-    <h1>Od Demoes</h1>
+    <h1>Od Demos</h1>
 </body>
 </html>
