--- a/Od/Examples/DbMonsterOd/index.html
+++ b/Od/Examples/DbMonsterOd/index.html
@@ -11,7 +11,8 @@
     <div id="app"></div>
     <script src="app.js"></script>
     <script>
-        //Od.deferComponentUpdates = false;
+        Od.deferComponentUpdates = false;
+        Od.appendChild(DbMonsterOd.vdom, document.getElementById("app"));
         DbMonsterOd.run();
     </script>
 </body>
