Fixed a bug in patchChildren that occurred when moving a component child node. Improved the error reporting code in TestOd.

--- a/Od/Tests/TestOd/index.html
+++ b/Od/Tests/TestOd/index.html
@@ -3,13 +3,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Od/Od Unit Tests</title>
+    <title>Od/Tests/TestOd</title>
     <link rel="stylesheet" href="test.css" type="text/css" />
     <link rel="stylesheet" href="app.css" type="text/css" />
 </head>
 <body>
-    <h1>Od/Od Unit Tests</h1>
-
+    <h1>Od/Tests/TestOd</h1>
     <div id="failed" class="TestReportArea">
         <h2>Failed</h2>
     </div>
