--- a/Od/Examples/OdThreadIt/index.html
+++ b/Od/Examples/OdThreadIt/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="http://threaditjs.com/reset.css" type="text/css" />
     <link rel="stylesheet" href="http://threaditjs.com/shared.css" type="text/css" />
     <link rel="stylesheet" href="http://threaditjs.com/site.css" type="text/css" />
+    <script src="http://threaditjs.com/shared.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
