--- a/Od/Examples/DbMonsterOd/index.html
+++ b/Od/Examples/DbMonsterOd/index.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <title>DbMonsterOd</title>
-    <link rel="stylesheet" href="bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="app.css" type="text/css" />
 </head>
 <body>
     <div id="app"></div>
     <script src="app.js"></script>
     <script>
-        Od.deferComponentUpdates = false;
+        Od.deferComponentUpdates = true;
         Od.appendChild(DbMonsterOd.vdom, document.getElementById("app"));
         DbMonsterOd.run();
     </script>
